[tool.poetry]
name = "playground"
version = "0.0.0"
description = "Collection of ad hoc techniques and approaches"
authors = ["Niclas Thomas <niclas.thomas@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/ncthomas/playground"
keywords = []

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"
pandas = "^1.0.4"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
jupyter = "^1.0.0"
jupyterlab = "^2.1.4"
